--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title> contact details </title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+  <body >
     <ol>
       <h5>phone numbers</h5>
       <li>3838383838</li>
