--- a/hobbies.html
+++ b/hobbies.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+  <head >
     <meta charset="utf-8">
     <title>my hobbies</title>
+<link rel="stylesheet" href="css/style.css">
+  </head>
+  <body >
+
     <ol type="i">
       <li>running</li>
       <li>boxing</li>
       <li>workouts</li>
     </ol>
-  </head>
-  <body>
 
   </body>
 </html>
