--- a/input.html
+++ b/input.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>input models</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <h1><strong>models used in input</strong></h1>
@@ -13,7 +14,7 @@
         <label>your name</label>
         <input type="text" name="" value="">
         <input type="submit">
-        <br>
+        <br> 
         <label>date of birth</label>
         <input type="date">
         <br>
